
####   Don't forget to change the version number in configure.ac!   ####

21 Nov 2005 Added skeletal ptff - Bernard van der Helm
21 Nov 2005 STSI MP fix - Greg
21 Nov 2005 diag204 fix, STSI capability fix - Jan Jaeger
20 Nov 2005 trace.c: minor fix to PR format-9 trace entry - Fish
20 Nov 2005 configure.ac, hstdinc.h: Apple OS X build fixes - Fish
20 Nov 2005 Correct cpu capability value in STSI - Fish
20 Nov 2005 Reject any intrusive diagnose when diag8cmd is off - Jan Jaeger
19 Nov 2005 Fix GCC 2.95 errors in hostinfo.c, bldcfg.c - Roger Bowler
19 Nov 2005 dyngui.c: show offline CPUs as OFFLINE - Fish
18 Nov 2005 Expand environment vars in httproot if msvc - Fish
18 Nov 2005 Add trailing [back]slash to httproot only if needed - Fish
18 Nov 2005 Fix crash in UpdateTargetCPU when NUMCPU=0 - Fish
18 Nov 2005 Refit Ivan's GCC 2.95 fix to sockdev.h - Roger Bowler
17 Nov 2005 TAPECONV support for 64K blocksize by Charlie Brint - Roger Bowler
17 Nov 2005 Allow compiling support for up to 32 CPUs - Ivan Warren
13 Nov 2005 Add CPU configuration option to http server - Jan Jaeger
11 Nov 2005 Variable size panel - Greg Smith
08 Nov 2005 Fix CPU reconfiguration identification in SCPIN - Jan Jaeger
06 Nov 2005 Store Clock Fast (STCKF) - Jan Jaeger
05 Nov 2005 New format CPUID for z/Arch mode - Jan Jaeger
04 Nov 2005 PER3 include BEAR in suspend/resume file - Roger Bowler
03 Nov 2005 Fix cpu percentage display - Greg Smith
03 Nov 2005 Fix SIE addressing mode issue - Jan Jaeger
02 Nov 2005 Activate FEATURE_PER3 - Roger Bowler
02 Nov 2005 PER3 instruction-fetching nullification - Roger Bowler
01 Nov 2005 hercules no longer depends on libgcrypt - Ivan Warren
01 Nov 2005 Reinstate libhercu/t/d as shlibs/dlls - Ivan Warren
01 Nov 2005 Allow SIE to be issued from HOME SPACE Mode host - Ivan Warren
01 Nov 2005 It was decided the "New Panel" screens should ALWAYS be grey/black
            REGARDLESS of what the user's default bg/fg term colors are set to;