@@ -18,6 +18,8 @@
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
+#include "hstdinc.h"
+
 #include <string.h>
 
 #include "sha1.h"
